assets/css/custom.css
/*
==========================================================================
---------------------------  NockDown CSS---------------------------------
==========================================================================
*/

/*------------------- General ---------------------*/
body {
	min-height: 100%;
  height: 100%;
	font-family: 'kanit';
	font-size: 16px;
}
.home-haed-nockdown {
  z-index: 1;
  position:absolute;
  top:-1px;
  height:100%;
  width:100%;
  background-color:#f4f4f2;
  -webkit-clip-path: polygon(0 15%, 50% 0, 100% 15%, 100% 0, 0 0);
  clip-path: polygon(0 15%, 50% 0, 100% 15%, 100% 0, 0 0);
}
.home-haed-nockdown2 {
  z-index: 1;
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: #f4f4f2;
  -webkit-clip-path: polygon(0 15%, 50% 0, 100% 15%, 100% 0, 0 0);
  clip-path: polygon(0 10%, 50% 0, 100% 10%, 100% 0, 0 0);
}
.absolute {
  position: absolute;
}
.home-title-top20 {
  margin-top: 20px;
}
a:hover {
  color: #522980!important;
  text-decoration: initial!important;
}
.align-center{
	text-align: center;
}
.footer-fontset-h4 {
    font-size: 23px;
    font-weight: bold;
    line-height: 1.5;
    color: #522980;
}
.home-contact-head-size {
    width: 150px;
    margin: auto;
}
.home-backgroun-contact {
   background-color: #f4f4f2;
}
div.footer-fontset-h4 {
  margin-top: 10px;
}
.fa {
  font-size: 20px;
}
.letter-spacing-2 {
  letter-spacing: 1.5px;
}
.letter-spacing-3 {
  letter-spacing: 2px;
}
.letter-spacing-1 {
  letter-spacing: 1px;
}
.marginbot-auto {
  margin-bottom: auto;
}
.carousel-indicators li {
	width: 10px;
	height: 10px;
  border-radius: 30px;
	padding:0px;
}
.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown:hover .dropbtn {
    background-color: #3e8e41;
}

/*============= Animation ======================*/
.animation-moving {
    width: 100px;
    height: 50px;
    position: relative;
    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
    animation: mymove 5s infinite;
}
.img-logo-animation {
  width: 10%;
  margin-top: -5pt;
}
#div1 {-webkit-animation-timing-function: linear;}s

#div1 {animation-timing-function: linear;}
@-webkit-keyframes mymove {
    from {left: 500px;}
    to {left: 0px;}
}

@keyframes mymove {
    from {left: 500px;}
    to {left: 0px;}
}
.home-x-contact {
  margin: 0px 15px;
}
.kasian-col-haed {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    padding-left: 0px;
    padding-right: 0px;
    margin-left: -8px;
}
.kasian-col-haed-nav {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 100%;
    max-width: 100%;
    padding-left: 0px;
    padding-right: 0px;
}
.kasian-col-haed {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    padding-left: 0px;
    padding-right: 0px;
    margin-left: -4px;
    margin-right: -4px;
}
p {
    margin-top: 0;
    margin-bottom: 0rem;
}
/*========================== Haeder - Footer ================================
===================================================================*/

#font-wight {
    font-weight: 400;
}
#btn-curosel-head-u {
    top: 50%;
    /* transform: translate(0%, -50%); */
}
.home-fix-title {
    overflow: hidden;
    margin-bottom: 15px;
    margin-top: 15px;
    color: #52297f;
    font-weight: bold;
    font-size: 20px;
    height: 23px;
}
.back-slider-home {
    background-image: url('../images/bg-yellow.jpg');
    background-repeat: no-repeat;
    background-size: 100%;
    background-position-y: 0ex;
    height: 625px;
}
.footer-icon-go-top {
    padding-top: 10px;
}
.home-border-radius {
    width: 100%;
    height: 100px;
    border-top: solid 100px #fff;
    border-color: #fff transparent transparent transparent;
    border-radius: 50%/100% 100% 0 0;
    margin-top: -6rem;
}
.home-fix-img-content {
    width: 100%;
}
.home-py-5 {
    padding-top: 45px;
    padding-bottom: 80px;
}
.home-fix-img {
    height: 14rem;
}
.home-x-2 {
    margin-left: 5rem;
    margin-right: 5rem;
}

.home-x-2-remaster {
    margin-left: 5rem;
    margin-right: 0rem;
}

.home-x-2-remaster-2 {
    margin-left: 0rem;
    margin-right: 5rem;
}

.home-x-2-remaster:focus {
	outline: unset !important;
}

.home-x-2-remaster-2:focus {
	outline: unset !important;
}

.home-x-5:focus{
	outline: unset !important;
}

.form-nockdown{
	outline: unset !important;

}

.home-x-5 {
    margin-left: 5rem;
    margin-right: 5rem;
}
span.bnt-nav-bar {
    position: relative;
    margin: 0 auto;
    left: 0em;
    top: 0em;
}
li, a.nav-footer {
    font-family: 'kanit';
    color: #7a56a2!important;
    padding: 0px 0px;
    font-weight: normal;
}
/* .nav-font-setauto:hover{
    position: absolute;
    margin-top: -11px;
    margin-left: -11px;
} */

.button-center-kasien {
    display: block!important;
    text-align: -webkit-center!important;
}
button {
  cursor: pointer;
}
textarea {
  border-radius: 1rem!important;
}
textarea.form-nockdown {
  height: 200px;
  resize: none;
}
.line-icon-size-auto {
  width: 8%;
}
.card-text-nockdown:last-child {
    margin-bottom: 5px;
    overflow: hidden;
    height: 43px;
    color: #52297f;
}
.text-paragraph{
    text-align: justify;
    text-indent: 65px;
}
/*h2 {
  margin-left: -20px;
}*/
.text-purple {
  color: #522980;
}
.background-color {
  background-color: #17073ee8;
  margin-bottom: 10ex;
}

.home-line-top {

}
#home-setcollume {
    margin-top: 20ex;
    margin-bottom: 10rem;
}
.card-nockdown {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
}
.card-img-top-nockdown {
    width: 100%;
    cursor: pointer;
}

.social-link{
	color:#52297f;
}

.btn-nockdown:hover{
	background-color:#f4f4f2;
	color:#52297f;
	border-color:#52297f;
}
/* ... */

